@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-15T00:59:22Z",
-  "count_outdated" : 1471,
-  "uniques_outdated" : 455,
+  "timestamp" : "2025-07-16T00:58:25Z",
+  "count_outdated" : 1472,
+  "uniques_outdated" : 456,
   "count" : 1473,
   "uniques" : 457,
   "views" : [
-    {
-      "timestamp": "2025-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-11T00:00:00Z",
       "count": 1,
