@@ -1,3 +1,12 @@
+2025-07-16T00:58:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16307730239 # 706
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-16
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 455 1471 / 457 1473
+* notice: next accum: outdated-unq outdated-all / unq all: 456 1472 / 457 1473
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-07-01] / []
+
 2025-07-15T00:59:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16281406122 # 705
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-15
